# QTCalculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.hpp  main.cpp  mainwindow.cpp  numSysValidator.cpp  numsyscalc.cpp  numsyscalc.h
include/: calculator.hpp  mainwindow.h  numSysValidator.h  numsyscalc.h
